--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -192,6 +192,12 @@
     }
 }
 
+@mixin small-tablet {
+    @media screen and (max-width: 850px) {
+        @content;
+    }
+}
+
 @mixin mobile {
     @media screen and (max-width: 590px) {
         @content;
