--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -184,6 +184,12 @@
             }
         }
     }
+
+    blockquote {
+        background: rgba($primary-color, .2);
+        border-left: 8px solid $primary-color;
+        padding: 6px 32px;
+    }
 }
 
 @mixin tablet {
