--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -21,6 +21,9 @@
               <a href="{{ ref . "register" }}">{{ .Param "navigation.register" }}</a>
             </li>
             <li>
+              <a href="{{ ref . "events" }}">{{ .Param "navigation.events" }}</a>
+            </li>
+            <li>
               <a href="{{ ref . "faq" }}">{{ .Param "navigation.faq" }}</a>
             </li>
           </ul>
