--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -22,6 +22,9 @@
         <a href="{{ ref . "register" }}">{{ .Site.Param "navigation.register" }}</a>
       </li>
       <li>
+        <a href="{{ ref . "events" }}">{{ .Site.Param "navigation.events" }}</a>
+      </li>
+      <li>
         <a href="{{ ref . "faq" }}">{{ .Site.Param "navigation.faq" }}</a>
       </li>
     </ul>
