--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -310,6 +310,10 @@
     font-weight: 600;
     font-size: 32px;
     display: inline-block;
+
+    &:hover {
+        text-decoration: underline;
+    }
 }
 
 .home-event-link {
