--- a/layouts/events/single.html
+++ b/layouts/events/single.html
@@ -13,13 +13,18 @@
       <div class="event-detail-header-left">
         <h1 class="events-title">{{ .Title }}</h1>
         <h2 class="event-detail-sub-title">{{ .Page.Param "subTitle" }}</h2>
+        <div class="event-detail-meta">
+          {{ if .Param "eventDate" }}<h3 class="event-detail-header-date">{{ .Params.EventDate | time.Format ":date_long" }}</h3>{{ end }}
+          <h3 class="event-detail-header-place">{{ .Params.Place }}</h3>
+        </div>
         {{ if .Page.Param "registerUrl" }}
-          <a class="event-detail-header-register-cta" href="{{ .Params.RegisterUrl }}">{{ i18n "register" }}</a>
+          <a class="event-detail-header-register-cta" target="_blank" href="{{ .Params.RegisterUrl }}">{{ i18n "register" }}</a>
         {{ end }}
       </div>
-      <div class="event-detail-header-info">
-        {{ if .Param "eventDate" }}<h3 class="event-detail-header-date">{{ .Params.EventDate | time.Format ":date_long" }}</h3>{{ end }}
-        <h3 class="event-detail-header-place">{{ .Params.Place }}</h3>
+      <div class="event-detail-header-poster">
+        {{ if .Page.Param "poster" }}
+          {{ with .Params.poster }}<img src="{{ . }}">{{ end }}
+        {{ end }}
       </div>
     </div>
   </section>
@@ -29,82 +34,102 @@
     </main>
 
     <aside class="event-detail-info">
-      <h3 class="event-detail-info-title">{{ i18n "When" }}?</h3>
 
-      <table class="event-detail-info-table">
-        <tbody>
-          {{ if .Param "eventDate" }}
+      <section class="event-detail-info-box">
+        <h3 class="event-detail-info-title">{{ i18n "When" }}?</h3>
+        <table class="event-detail-info-table">
+          <tbody>
+            {{ if .Param "eventDate" }}
+              <tr>
+                <td>{{ i18n "Date" }}:</td>
+                <td>{{ .Params.EventDate | time.Format ":date_long" }}</td>
+              </tr>
+              <tr>
+                <td>{{ i18n "Start" }}:</td>
+                <td>{{ .Params.EventDate | time.Format ":time_short" }}</td>
+              </tr>
+            {{ end }}
+            {{ if .Param "endDate" }}
+              <tr>
+                <td>{{ i18n "End" }}:</td>
+                <td>{{ .Params.EndDate | time.Format ":time_short" }}</td>
+              </tr>
+            {{ end }}
+            {{ if .Params.Duration }}
+              <tr>
+                <td>{{ i18n "Duration" }}:</td>
+                <td>{{ .Params.Duration }}</td>
+              </tr>
+            {{ end }}
+          </tbody>
+        </table>
+      </section>
+
+      <section class="event-detail-info-box">
+        <h3 class="event-detail-info-title">{{ i18n "Where"}}?</h3>
+        <table class="event-detail-info-table">
+          <tbody>
             <tr>
-              <td>{{ i18n "Date" }}:</td>
-              <td>{{ .Params.EventDate | time.Format ":date_long" }}</td>
+              <td>{{ i18n "Place" }}:</td>
+              <td>{{ .Params.Place }}</td>
             </tr>
             <tr>
-              <td>{{ i18n "Start" }}:</td>
-              <td>{{ .Params.EventDate | time.Format ":time_medium" }}</td>
+              <td>{{ i18n "Address" }}:</td>
+              <td>{{ .Params.PlaceAddress }}</td>
             </tr>
-          {{ end }}
-          <tr>
-            <td>{{ i18n "Duration" }}:</td>
-            <td>{{ .Params.Duration }}</td>
-          </tr>
-        </tbody>
-      </table>
-
-      <h3 class="event-detail-info-title">{{ i18n "Where"}}?</h3>
-      <table class="event-detail-info-table">
-        <tbody>
-          <tr>
-            <td>{{ i18n "Place" }}:</td>
-            <td>{{ .Params.Place }}</td>
-          </tr>
-          <tr>
-            <td>{{ i18n "Address" }}:</td>
-            <td>{{ .Params.PlaceAddress }}</td>
-          </tr>
-          <tr>
-            <td>{{ i18n "Website" }}:</td>
-            <td><a href="//{{ .Params.placeUrl }}">{{ .Params.placeUrl }}</a></td>
-          </tr>
-        </tbody>
-      </table>
+            <tr>
+              <td>{{ i18n "Website" }}:</td>
+              <td><a href="//{{ .Params.placeUrl }}">{{ .Params.placeUrl }}</a></td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
 
       {{ if .Page.Param "registerUrl" }}
-        <a class="event-detail-register-cta" href="{{ .Params.RegisterUrl }}">{{ i18n "register" }}</a>
+        <section class="event-detail-info-box">
+            <a class="event-detail-register-cta" target="_blank" href="{{ .Params.RegisterUrl }}">{{ i18n "register" }}</a>
+            <div class="event-detail-qr">
+              <x-qr data="{{ .Page.Param "registerUrl" }}"></x-qr>
+            </div>
+        </section>
       {{ end }}
 
-      <h3 class="event-detail-info-title">{{ i18n "Share" }}:</h3>
-
-      <div class="event-detail-info-share">
-        {{ partial "share" . }}
-      </div>
+      <section class="event-detail-info-box">
+        <h3 class="event-detail-info-title">{{ i18n "Share" }}:</h3>
+        <div class="event-detail-info-share">
+          {{ partial "share" . }}
+        </div>
+      </section>
 
       {{ if and (isset .Page.Params "lat") (isset .Page.Params "lon") }}
-        <h3 class="event-detail-info-title">{{ i18n "Map" }}:</h3>
-        <div class="event-detail-info-map">
-          <x-map
-              class="event-detail-map"
-              lat="{{ .Page.Param "lat" }}"
-              lng="{{ .Page.Param "lon" }}"
-              title="{{ .Page.Param "place" }}"
-              text="{{ .Page.Param "placeAddress" }}"
-            ></x-map>
-          <div class="event-detail-info-coords">
-            latitude: {{ .Page.Param "lat" }}</br>
-            longitude: {{ .Page.Param "lon" }}
-          </div>
+        <section class="event-detail-info-box">
+          <h3 class="event-detail-info-title">{{ i18n "Map" }}:</h3>
+          <div class="event-detail-info-map">
+            <x-map
+                class="event-detail-map"
+                lat="{{ .Page.Param "lat" }}"
+                lng="{{ .Page.Param "lon" }}"
+                title="{{ .Page.Param "place" }}"
+                text="{{ .Page.Param "placeAddress" }}"
+              ></x-map>
+            <div class="event-detail-info-coords">
+              latitude: {{ .Page.Param "lat" }}</br>
+              longitude: {{ .Page.Param "lon" }}
+            </div>
 
-          <div class="event-detail-info-map-links">
-            <a target="_blank" href="https://www.openstreetmap.org/directions?from=&to={{ .Page.Param "lat"}}%2C{{ .Page.Param "lon"}}">
-              {{ i18n "open in" }} Open Street Map
-            </a>
-            <a target="_blank" href="https://www.google.com/maps?q=loc:{{.Page.Param "lat"}},{{ .Page.Param "lon" }}">
-              {{ i18n "open in" }} Google Maps
-            </a>
-            <a target="_blank" href="//mapy.cz/zakladni?q={{ .Page.Param "lat"}}N%2C {{ .Page.Param "lon" }}E">
-              {{ i18n "open in" }} Mapy.cz
-            </a>
+            <div class="event-detail-info-map-links">
+              <a target="_blank" href="https://www.openstreetmap.org/directions?from=&to={{ .Page.Param "lat"}}%2C{{ .Page.Param "lon"}}">
+                {{ i18n "open in" }} Open Street Map
+              </a>
+              <a target="_blank" href="https://www.google.com/maps?q=loc:{{.Page.Param "lat"}},{{ .Page.Param "lon" }}">
+                {{ i18n "open in" }} Google Maps
+              </a>
+              <a target="_blank" href="//mapy.cz/zakladni?q={{ .Page.Param "lat"}}N%2C {{ .Page.Param "lon" }}E">
+                {{ i18n "open in" }} Mapy.cz
+              </a>
+            </div>
           </div>
-        </div>
+        </section>
       {{ end }}
     </aside>
   </div>
