--- a/assets/scss/_configuration.scss
+++ b/assets/scss/_configuration.scss
@@ -1,9 +1,10 @@
 $main-font: 'Merriweather Sans', sans-serif;
-$secondary-font: 'Abril Fatface', cursive;
+$secondary-font: 'Abril Fatface', serif;
 
 $dark-color: #000000;
 $mutted-color: #2a3439;
 $more-mutted-color: #3d3d41;
+$more-more-mutted-color: #778185;
 $very-mutted-color: #dcdcdc;
 $light-color: #ffffff;
 $primary-color: #237fa8;
