--- a/assets/scss/_events.scss
+++ b/assets/scss/_events.scss
@@ -2,7 +2,6 @@
     border-bottom: 6px solid $primary-color;
     border-top: 6px solid $primary-color;
     background: $very-mutted-color;
-    margin-bottom: 32px;
 }
 
 .events-header-content {
@@ -32,15 +31,45 @@
     @include style-md;
 }
 
+.events-event-poster {
+    display: flex;
+    justify-content: flex-start;
+    flex-shrink: 0;
+    flex-grow: 0;
+}
+
 .events-content {
     @include page-body;
     display: flex;
     flex-direction: column;
     flex-grow: 1;
+    padding-top: 64px;
+    padding-bottom: 64px;
+}
+
+.events-list {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+
+    &.past {
+        opacity: 0.7;
+    }
+}
+
+.events-event-header {
+    display: flex;
+    align-items: flex-start;
+    gap: 12px;
+}
+
+.events-event-head {
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
 }
 
 .events-event-title {
-    margin: 18px 0;
     font-weight: 600;
     font-size: 32px;
     display: inline-block;
@@ -61,27 +90,50 @@
     line-height: 1.6em;
 }
 
+.events-past {
+    font-size: 32px;
+    font-weight: 300;
+    border-bottom: 4px solid $very-mutted-color;
+    padding-bottom: 12px;
+    margin: 32px 0;
+}
+
 .events-event-item {
-    padding-bottom: 32px;
+    display: flex;
+    gap: 32px;
+    padding-bottom: 24px;
     border-bottom: 2px solid $very-mutted-color;
+    align-items: center;
 
     &:last-child {
         border-bottom: none;
     }
 }
 
+.events-event-body {
+    flex-grow: 1;
+    flex-shrink: 1;
+}
+
+
 .events-event-date {
-    background: $primary-color;
-    color: $light-color;
+    font-family: $secondary-font;
+    border: 2px solid $primary-color;
+    border-top-width: 12px;
+    color: $primary-color;
     font-weight: 600;
-    padding: 0 4px;
-    border-radius: 2px;
+    padding: 4px 4px;
+    border-radius: 3px;
+    text-align: center;
+    display: block;
+    width: 75px;
+    flex-shrink: 0;
+    flex-grow: 0;
 }
 
 .events-event-place {
     font-weight: 600;
-    font-style: italic;
-    color: $mutted-color;
+    color: $primary-color;
 }
 
 .event-detail-header-content {
@@ -100,7 +152,7 @@
 .event-detail-meta {
     display: flex;
     flex-direction: column;
-    gap: 4px;
+    gap: 8px;
 }
 
 .event-detail-header-left {
@@ -117,6 +169,7 @@
 .event-detail-sub-title {
     font-weight: 400;
     font-size: 27px;
+    line-height: 1.4em;
     color: $mutted-color;
 }
 
@@ -132,12 +185,14 @@
     gap: 6px;
     height: 350px;
 
-    & img {
-        height: 100%;
+    @include tablet {
+        align-items: center;
+        justify-content: center;
     }
 
-    @include tablet {
-        align-items: flex-start;
+    & img {
+        display: block;
+        height: 100%;
     }
 }
 
@@ -265,4 +320,24 @@
     font-weight: 700;
     font-size: 20px;
     margin-bottom: 6px;
+}
+
+a.event-detail-content-register-cta {
+    @include cta-btn;
+    margin: 64px 0;
+    color: $dark-color;
+
+    &:visited {
+        color: $dark-color;
+    }
+}
+
+.events-event-detail-link {
+    color: $primary-color;
+    font-weight: 700;
+
+    &:hover {
+        background: $primary-color;
+        color: $light-color;
+    }
 }
