--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -306,7 +306,6 @@
 }
 
 .home-event-title {
-    margin: 64px 0 18px 0;
     font-weight: 600;
     font-size: 32px;
     display: inline-block;
@@ -327,25 +326,33 @@
     line-height: 1.6em;
 }
 
-.home-event-item {
-    padding-bottom: 32px;
-    border-bottom: 2px solid $very-mutted-color;
+.home-event-list {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    padding: 64px 0 32px 0;
+}
 
-    &:last-child {
-        border-bottom: none;
+.home-events-empty {
+    @include style-md;
+    background: rgba($primary-color, .2);
+    padding: 12px;
+    border: 2px solid $primary-color;
+}
+
+.home-more-events {
+    color: $primary-color;
+    font-weight: 700;
+    font-size: 20px;
+    align-self: center;
+
+    &:hover {
+        background: $primary-color;
+        color: $light-color;
     }
 }
 
-.home-event-date {
-    background: $primary-color;
-    color: $light-color;
-    font-weight: 600;
-    padding: 0 4px;
-    border-radius: 2px;
-}
-
-.home-event-place {
-    font-weight: 600;
-    font-style: italic;
-    color: $mutted-color;
+.home-events-body {
+    display: flex;
+    flex-direction: column;
 }
