--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -151,12 +151,12 @@
 
     ul {
         list-style-type: square;
-        padding: 12px 0 12px 52px;
+        padding: 6px 0 6px 32px;
         font-weight: 500;
         text-align: left;
 
         li {
-            margin: 12px 0;
+            margin: 6px 0;
             line-height: 1.5em;
         }
     }
@@ -215,5 +215,5 @@
     font-weight: 800;
     letter-spacing: -2px;
     margin-bottom: -18px;
-    color: $very-mutted-color;
+    color: $more-more-mutted-color;
 }
