--- a/layouts/index.html
+++ b/layouts/index.html
@@ -47,35 +47,36 @@
   </section>
 
   <section class="home-events">
-    <main class="home-page-body">
+    <main class="home-page-body home-events-body">
       <h2 class="home-events-title">{{ .Param "home.eventsTitle" }}</h2>
       <div class="home-events-description">
 
-        {{ with .Site.GetPage "home-events" }}
+        {{ with .Site.GetPage "events" }}
           {{ .Content }}
         {{ end }}
 
       </div>
 
-      {{ range (where .Site.RegularPages "Section" "events") }}
-        <div class="home-event-item">
-          <h3 class="home-event-title">
-            <a href="{{ .Permalink }}" class="home-event-link">
-              {{ .Title }}
-            </a>
-          </h3>
-          <div class="home-event-info">
-            {{ if .Param "eventDate" }}
-              <span class="home-event-date">{{ .Params.EventDate | time.Format ":date_short" }}</span>
-            {{ end }}
-            <span class="home-event-place">{{ .Params.Place }}</span>
-          </div>
-          <div class="home-event-description">
-            {{ .Summary }}
-          </div>
-        </div>
-      {{ end }}
+      <div class="home-event-list">
+        {{ $upcomming := first 3 (where (sort (where .Site.RegularPages "Section" "events") ".Date" "asc") ".Date" ">=" now) }}
+        {{ if gt ($upcomming | len) 0 }}
+          {{ range $upcomming }}
+            {{ partial "event-item" . }}
+          {{ end }}
+        {{ else }}
+            <div class="home-events-empty">
+              {{ with .Site.GetPage "events" }}
+                {{ .Param "noUpcoming" | markdownify }}
+              {{ end }}
+            </div>
 
+            {{ range first 3 (where .Site.RegularPages "Section" "events") }}
+              {{ partial "event-item" . }}
+            {{ end }}
+        {{ end }}
+      </div>
+
+      <a class="home-more-events" href="{{ ref . "events" }}">{{ .Page.Param "moreEvents" }}</a>
     </main>
   </section>
 {{ end }}
