Minor improvements and unifications (#181)
Mostly cosmetics and readability improvement across the site

----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -344,11 +344,15 @@
     color: $primary-color;
     font-weight: 700;
     font-size: 20px;
-    align-self: center;
+    text-align: center;
+    padding: 12px;
+    border: 2px solid transparent;
+    border-radius: 3px;
 
     &:hover {
-        background: $primary-color;
-        color: $light-color;
+        border-color: $primary-color;
+        background: rgba($primary-color, .2);
+        text-decoration: none;
     }
 }
 
