--- a/layouts/statutes/single.html
+++ b/layouts/statutes/single.html
@@ -23,6 +23,8 @@
     </div>
   </section>
   <main class="single-page-body">
-    {{ .Content }}
+    <div class="statutes-content">
+      {{ .Content }}
+    </div>
   </main>
 {{ end }}
