Translate sub footer (#185)
Czech translation of sub footer (licensing info).
Also to follow Creative Commons and FSF recommendations - add assertion
of copyright.

----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -126,7 +126,7 @@
 
 <section class="site-after-footer">
   <div class="site-licensing-note">
-    Content is provided under <a target="_blank" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a>.<br>
-    Source code is <a target="_blank" href="{{ .Site.Param "sourceUrl" }}">released</a> under <a target="_blank" href="//www.gnu.org/licenses/agpl-3.0.html">AGPL license</a>.
+    {{ .Site.Param "footer.licensingNote" | safeHTML }}<br><br>
+    © {{ now.Year }} {{ .Site.Author.name }}
   </div>
 </section>
