Add content hashes to file names (#186)
Add content hashes to filenames. This means that any change to any file
will lead to change in file name. This means change in URLs which is
similar to "eviction of caches".

----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/layouts/events/single.html
+++ b/layouts/events/single.html
@@ -3,7 +3,7 @@
 {{ end }}
 
 {{ define "scripts" }}
-  {{ $events_js := resources.Get "ts/events.ts" | js.Build }}
+  {{ $events_js := resources.Get "ts/events.ts" | js.Build | resources.Fingerprint "sha512" }}
   <script src="{{ $events_js.Permalink }}" defer></script>
 {{ end }}
 
@@ -34,7 +34,7 @@
       </div>
 
       {{ if .Page.Param "poster" }}
-        {{ $poster := resources.Get (path.Join "images/events" .Page.Params.poster) }}
+        {{ $poster := resources.Get (path.Join "images/events" .Page.Params.poster) | resources.Fingerprint "sha512" }}
         <a target="_blank" href="{{ $poster.RelPermalink }}" class="event-detail-header-poster">
           {{ $resized := $poster.Fit "250x350 Top" }}
           <img src="{{ $resized.RelPermalink }}" alt="poster">
