--- a/layouts/about/single.html
+++ b/layouts/about/single.html
@@ -23,7 +23,7 @@
   </section>
   <main class="about-page-body">
     <div class="about-page-right">
-      {{ $logo := resources.Get "svg/oop-ict-logo.svg" }}
+      {{ $logo := resources.Get "svg/oop-ict-logo.svg" | resources.Fingerprint "sha512" }}
       <img src="{{ $logo.Permalink }}" alt="{{ .Param "title" }}" />
     </div>
     <div class="about-page-left">
