--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,6 +1,6 @@
 <header class="site-header">
   <a class="site-title" href="{{ ref . "/" }}">
-    {{ $logo := resources.Get "svg/oop-ict-logo.svg" }}
+    {{ $logo := resources.Get "svg/oop-ict-logo.svg" | resources.Fingerprint "sha512" }}
     <img class="site-header-logo" src="{{ $logo.Permalink }}" alt="{{ .Param "title" }}" />
     <div>
       <strong>{{ .Site.Title }}</strong>
