--- a/layouts/statements/single.html
+++ b/layouts/statements/single.html
@@ -39,7 +39,7 @@
     </div>
 
     <div class="statements-right">
-      {{ $logo := resources.Get "svg/oop-ict-logo.svg" }}
+      {{ $logo := resources.Get "svg/oop-ict-logo.svg" | resources.Fingerprint "sha512" }}
       <img class="statements-logo" src="{{ $logo.Permalink }}" alt="{{ .Site.Param "title" }}" />
 
       <h3 class="statements-right-title">{{ i18n "Share" }}:</h3>
