Events final polishes (#189)
Final polishes in events

----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/assets/scss/_events.scss
+++ b/assets/scss/_events.scss
@@ -139,6 +139,7 @@
 .event-detail-header-content {
     @include page-body;
     display: flex;
+    gap: 64px;
     justify-content: space-between;
     padding-top: 72px;
     padding-bottom: 32px;
@@ -184,6 +185,7 @@
     justify-content: flex-end;
     gap: 6px;
     height: 350px;
+    align-self: center;
 
     @include tablet {
         align-items: center;
