--- a/layouts/events/single.html
+++ b/layouts/events/single.html
@@ -34,7 +34,7 @@
       </div>
 
       {{ if .Page.Param "poster" }}
-        {{ $poster := resources.Get (path.Join "images/events" .Page.Params.poster) | resources.Fingerprint "sha512" }}
+        {{ $poster := .Resources.GetMatch .Page.Params.poster | resources.Fingerprint "sha512" }}
         <a target="_blank" href="{{ $poster.RelPermalink }}" class="event-detail-header-poster">
           {{ $resized := $poster.Fit "250x350 Top" }}
           <img src="{{ $resized.RelPermalink }}" alt="poster">
