--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -194,6 +194,7 @@
         background: rgba($primary-color, .2);
         border-left: 8px solid $primary-color;
         padding: 6px 32px;
+        text-align: left;
     }
 }
 
