Improve klimathon event formatting (#194)
Some improvements/smaller corrections to formatting of klimathon event
text.

----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -195,6 +195,10 @@
         border-left: 8px solid $primary-color;
         padding: 6px 32px;
         text-align: left;
+
+        p {
+            text-align: left;
+        }
     }
 }
 
