fix language name rendering (#199)
There seems to be weird issue with hugo shadowing or ignoring the
`languageName` attribute. This leads to language name no longer
displaying on web. This fixes the problem.


----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -73,7 +73,7 @@
                 <li>
                   <a href="{{ $translation.Permalink | relURL }}">
                     {{ .Params.languageFlag }}
-                    {{ .Params.languageName }}
+                    {{ .Params.language }}
                   </a>
                 </li>
                 {{- end }}
