--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -40,11 +40,11 @@
                     selected
                     {{ end }}>
               {{ .Params.languageFlag }}
-              {{ .Params.languageName }}
+              {{ .Params.language }}
             </option>
           {{- end }}
-          {{- end }}
         {{- end }}
+      {{- end }}
     </select>
   </nav>
 </header>
