add cmkos support statement (czech only) (#201)
Add CMKOS support statement, czech only for now.


----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -190,6 +190,10 @@
         }
     }
 
+    img {
+        max-width: 100%;
+    }
+
     blockquote {
         background: rgba($primary-color, .2);
         border-left: 8px solid $primary-color;
