--- a/assets/scss/_events.scss
+++ b/assets/scss/_events.scss
@@ -182,10 +182,11 @@
 .event-detail-header-poster {
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: center;
     gap: 6px;
     height: 350px;
     align-self: center;
+    flex-grow: 0;
 
     @include tablet {
         align-items: center;
@@ -194,7 +195,6 @@
 
     & img {
         display: block;
-        height: 100%;
     }
 }
 
