--- a/layouts/register/list.html
+++ b/layouts/register/list.html
@@ -118,7 +118,7 @@
                 <div class="register-signature-default-btns">
                   <button data-role="sign" type="button">{{ i18n "Sign" }}</button>
                   <button data-role="upload" type="button">{{ i18n "Upload" }}</button>
-                  <button class="register-signature-clear-btn" data-role="clear" type="button">Clear</button>
+                  <button class="register-signature-clear-btn" data-role="clear" type="button">{{ i18n "Clear" }}</button>
                 </div>
                 <span class="register-signature-drag-info">{{ i18n "dnd in place" }}</span>
               </div>
