--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -16,6 +16,9 @@ but it makes long term maintainanece much simpler.
 @import "icons";
 @import "fonts";
 
+// Action network widget css file
+@import url('https://actionnetwork.org/css/style-embed-v3.css');
+
 // Load Pieces
 @import "configuration";
 @import "mixins";
