--- a/layouts/events/single.html
+++ b/layouts/events/single.html
@@ -46,6 +46,10 @@
   <div class="event-detail-page-body">
     <main class="event-detail-content">
       {{ .Content }}
+      {{ if .Page.Param "petitionId"}}
+        <script src="https://actionnetwork.org/widgets/v5/petition/{{ .Params.PetitionId }}?format=js&source=widgets"></script>
+        <div id="can-petition-area-{{ .Params.PetitionId }}" style=width: 100%></div>
+      {{ end }}
     </main>
 
     <aside class="event-detail-info">
