form cookie consent (#212)
Added text on top of petition widget (based on Signal group discussion)


----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

---------

[anonymized]
[anonymized]

--- a/assets/scss/_events.scss
+++ b/assets/scss/_events.scss
@@ -343,3 +343,9 @@ a.event-detail-content-register-cta {
         color: $light-color;
     }
 }
+
+.events-cookie-consent {
+    font-style: italic;
+    margin-top: 40px;
+    margin-bottom: 6px;
+}
