Improvements in events layout and petition support (#213)
- Add CTA buttons back
- Add JS to JS block rather then in middle of page
- improve layout for petition embedding
- improve styling of petition notice


----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/assets/scss/_events.scss
+++ b/assets/scss/_events.scss
@@ -346,6 +346,20 @@ a.event-detail-content-register-cta {
 
 .events-cookie-consent {
     font-style: italic;
-    margin-top: 40px;
-    margin-bottom: 6px;
+    color: $primary-color;
+    border: 2px solid $primary-color;
+    border-radius: 4px;
+    padding: 12px;
+    font-weight: 600;
+    font-size: 21px;
+}
+
+.event-detail-petition-embed {
+    width: 100%;
+}
+
+.event-detail-petition-container {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
 }
