fix petition side pane CTA copy (#215)
2 fixes for events:

- make date container wider to fit larger date texts like "Aug 30, 2023"
- fix cta copy in petition events to "sign"


----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/layouts/events/single.html
+++ b/layouts/events/single.html
@@ -133,14 +133,18 @@
 
       {{ if .Page.Param "registerUrl" }}
         <section class="event-detail-info-box">
-            <a class="event-detail-register-cta {{ if $past }} disabled {{ end }}" target="_blank" {{ if not $past }} href="{{ .Params.RegisterUrl }}" {{ end }}>{{ i18n $ctaType }}</a>
-            <div class="event-detail-qr">
-              <x-qr data="{{ .Page.Param "registerUrl" }}"></x-qr>
-            </div>
+          <a class="event-detail-register-cta {{ if $past }} disabled {{ end }}" target="_blank" {{ if not $past }} href="{{ .Params.RegisterUrl }}" {{ end }}>
+            {{ i18n $ctaType }}
+          </a>
+          <div class="event-detail-qr">
+            <x-qr data="{{ .Page.Param "registerUrl" }}"></x-qr>
+          </div>
         </section>
       {{ else if .Page.Param "petitionId" }}
         <section class="event-detail-info-box">
-            <a class="event-detail-register-cta {{ if $past }} disabled {{ end }}" target="_blank" {{ if not $past }} href="https://actionnetwork.org/petitions/{{ .Params.PetitionId }}" {{ end }}>{{ i18n $ctaType }}</a>
+          <a class="event-detail-register-cta {{ if $past }} disabled {{ end }}" target="_blank" {{ if not $past }} href="https://actionnetwork.org/petitions/{{ .Params.PetitionId }}" {{ end }}>
+            {{ i18n "sign" }}
+          </a>
             <div class="event-detail-qr">
               <x-qr data="https://actionnetwork.org/petitions/{{ .Params.PetitionId }}"></x-qr>
             </div>
