Fix footer contact links (#217)
Fix mailto and tel links in footer


----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -89,10 +89,10 @@
 
           <ul class="site-footer-contancts-ul">
             <li>
-              {{i18n "Email" }}: <a href="mailto:{{ .Site.Param "support_email" }}">{{ .Site.Param "supportEmail" }}</a>
+              {{i18n "Email" }}: <a href="mailto:{{ .Site.Param "supportEmail" }}">{{ .Site.Param "supportEmail" }}</a>
             </li>
             <li>
-              {{ i18n "Phone Number" }}: <a href="tel:{{ .Site.Param "support_phone" }}">{{ .Site.Param "supportPhone" }}</a>
+              {{ i18n "Phone Number" }}: <a href="tel:{{ .Site.Param "supportPhone" }}">{{ .Site.Param "supportPhone" }}</a>
             </li>
           </ul>
         </section>
